k8s/transmission/service_transmission.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-app  # Adjust service name as needed
spec:
  type: LoadBalancer  # Transmission will be using LoadBalancer
  selector:
    app: transmission-app
  ports:
  - name: http  # Adjust port name as needed
    port: 9091  # Adjust port as needed
    targetPort: 9091  # Adjust port as needed
    protocol: TCP
  - name: peer-tcp  # Adjust port name as needed
    port: 51413  # Adjust port as needed
    targetPort: 51413  # Adjust port as needed
    protocol: TCP
  - name: peer-udp  # Adjust port name as needed
    port: 51413  # Adjust port as needed
    targetPort: 51413  # Adjust port as needed
    protocol: UDP
